samples/_failures_safe/1761459417_c981c5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e89ce8a3.c: In function ‘primMST’:
./samples/SAFE/__tmp_e89ce8a3.c:138:5: error: expected identifier or ‘(’ at end of input
  138 |     int
      |     ^~~
./samples/SAFE/__tmp_e89ce8a3.c:138:5: error: expected declaration or statement at end of input
